3 bug fixes - navlinks on homepage work again - home social links are working on mobile - video background takes 100% now 100vh which when resized on mobile browser didnt look right

--- a/src/App.css
+++ b/src/App.css
@@ -65,8 +65,8 @@ li {
 }
 
 #background-video {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   position: fixed;
   left: 0;
@@ -99,17 +99,15 @@ li {
   border: 20px solid red;
 } */
 
-.bgImage:before {
+/* .bgImage:before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-image:
-    repeating-radial-gradient(circle, rgba(0, 0, 0, 0.72), rgba(0, 0, 0, 0.75)); */
   z-index: 1;
-}
+} */
 
 .footer-social-icon {
   width: 60px;
